Added Course Search by Text
