# docs/api_spec_swagger.yml
@@ -61,6 +61,12 @@ paths:
         required: false
         schema:
           type: integer
+      - in: query
+        name: search
+        description: Filter courses based on a search text (optional)
+        required: false
+        schema:
+          type: string
       responses:
         '400':
           description: Invalid input
